opam-version: "2.0"
maintainer: "Armael <armael@isomorphis.me>"
authors: "Armael <armael@isomorphis.me>"
homepage: "https://github.com/swaywm/wlroots-ocaml"
bug-reports: "https://github.com/swaywm/wlroots-ocaml/issues"
depends: [
  "ocaml" {>= "4.04.1"}
  "ctypes"
  "ctypes-foreign"
  "dune"
  "unix-time"
  "mtime"
  "base"
  "stdio"
]
build: ["dune" "build" "-p" name "-j" jobs "@install"]
