opam-version: "2.0"
maintainer: "Armael <armael@isomorphis.me>"
authors: "Armael <armael@isomorphis.me>"
homepage: "https://github.com/swaywm/wlroots-ocaml"
bug-reports: "https://github.com/swaywm/wlroots-ocaml/issues"
depends: [
  "ocaml" {>= "4.04.1"}
  "xkbcommon"
  "ctypes"
  "ctypes-foreign"
  "dune"
  "unix-time"
  "mtime"
  "base" { build }
  "stdio" { build }
  # Should have { with-test }.
  # Can't because of opam2nix.
  # https://github.com/timbertson/opam2nix/issues/36
  "tgls"
]
build: [
  ["dune" "build" "-p" name "-j" jobs "@install"]
  ["dune" "build" "-p" name "-j" jobs "@examples"] { with-test }
]
