(executables
  (names discover)
  (flags (:standard -safe-string))
  (libraries base stdio dune.configurator))

(rule
  (targets wlroots-ccopt.sexp
           wlroots-cclib.sexp
           wlroots-ccopt
           wlroots-cclib
           wayland-server-ccopt.sexp
           wayland-server-cclib.sexp
           wayland-server-ccopt
           wayland-server-cclib
           pixman-1-ccopt.sexp
           pixman-1-cclib.sexp
           pixman-1-ccopt
           pixman-1-cclib)
  (deps    (:discover discover.exe))
  (action  (run %{discover})))
