(library
  (name wlroots_ffi_f)
  (public_name wlroots.ffi_f)
  (modules generated_types ffi)
  (flags (:standard -w -9))
  (libraries wlroots_types_f
             wlroots_config wlroots_common
             ctypes ctypes.stubs
             unix-time.unix mtime.clock.os
             xkbcommon))

(executables
  (names stubgen)
  (modules stubgen)
  (libraries wlroots_ffi_f ctypes.stubs ctypes))

(rule (with-stdout-to "generated_types.ml" (run "../types/types_stubgen.exe")))
