; Functors containing the bindings
(library
  (name wlroots_types_f)
  (public_name wlroots.types_f)
  (modules types)
  (libraries ctypes ctypes.stubs ctypes.foreign xkbcommon))

; Stubgen, phase 1
(executables
  (names stubgen)
  (modules stubgen)
  (libraries wlroots_config wlroots_types_f ctypes.stubs ctypes))

; C file built by stubgen
(rule (with-stdout-to "types_stubgen.c" (run "./stubgen.exe")))

; Stubgen, phase 2
; C executable that checks struct offsets and outputs ML file
(rule
  (targets types_stubgen.exe)
  (deps (:types_stubgen ./types_stubgen.c)
        ../common/xdg-shell-protocol.h
        ../config/wlroots-ccopt
        ../config/wlroots-cclib
        ../config/wayland-server-ccopt
        ../config/wayland-server-cclib
        ../config/pixman-1-ccopt
        ../config/pixman-1-cclib)
  (action (bash "\
%{cc} %{types_stubgen} \
  $(< ../config/wlroots-ccopt) $(< ../config/wlroots-cclib) \
  $(< ../config/wayland-server-ccopt) $(< ../config/wayland-server-cclib) \
  $(< ../config/pixman-1-ccopt) $(< ../config/pixman-1-cclib) \
  -DWLR_USE_UNSTABLE \
  -I `dirname %{lib:ctypes:ctypes_cstubs_internals.h}` \
  -I ../common \
  -I %{ocaml_where} -o %{targets}")))
